# head-first-design-patterns-cpp

./: .gitignore  README.md
DecoratorPattern/: Makefile  beverage.h  condimentDecorator.h  darkRoast.h  decaf.h  espresso.h  houseBlend.h  mocha.h  soy.h  starbuzzCoffee  starbuzzCoffee.cpp  steamedMilk.h  whip.h
ObserverPattern/: Makefile  currentConditionsDisplay.h  displayElement.h  forecastDisplay.h  observer.h  statisticsDisplay.h  subject.h  weatherData.h  weatherStation  weatherStation.cpp
StrategyPattern/: Makefile  duck.h  flyBehavior.h  flyTypes.h  mallardDuck.h  modelDuck.h  quackBehavior.h  quackTypes.h  simUDuckApp  simUDuckApp.cpp
StrategyPattern_concept/: CMakeLists.txt  CMakePresets.json
StrategyPattern_concept/inc/: duck.hpp  fly.hpp  quack.hpp
StrategyPattern_concept/test/: testDuckSim.cpp
