cmake_minimum_required(VERSION 3.24)
project(repo CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
add_compile_options(-O2 -g -fno-omit-frame-pointer -Wall -Wextra -Werror -Wconversion -Wshadow)

# Sanitizers via -DSAN=ASAN/UBSAN/TSAN
if(DEFINED SAN)
  if(SAN STREQUAL "ASAN")
    add_compile_options(-fsanitize=address,undefined)
    add_link_options(-fsanitize=address,undefined)
  elseif(SAN STREQUAL "UBSAN")
    add_compile_options(-fsanitize=undefined)
    add_link_options(-fsanitize=undefined)
  elseif(SAN STREQUAL "TSAN")
    add_compile_options(-fsanitize=thread)
    add_link_options(-fsanitize=thread)
  endif()
endif()

include(FetchContent)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG v1.14.0)
FetchContent_MakeAvailable(googletest)
enable_testing()

# StrategyPattern_concept build
add_library(duckSimHeaders INTERFACE)
target_include_directories(duckSimHeaders INTERFACE 
    ${CMAKE_CURRENT_SOURCE_DIR}/inc
)

add_executable(testDuckSim 
    ${CMAKE_CURRENT_SOURCE_DIR}/test/testDuckSim.cpp
)

target_link_libraries(testDuckSim PRIVATE 
    duckSimHeaders 
    GTest::gtest_main
)
add_test(NAME testDuckSim COMMAND testDuckSim)